--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="./script.js" async></script>
   </head>
   <body>
-    <img id="img" src="#" />
-    <blockquote id="quote">Citation</blockquote>
-    <span id="author">Auteur</span>
+    <img class="fadein" id="img" src="#" />
+    <blockquote class="fadein" id="quote">Citation</blockquote>
+    <span class="fadein" id="author">Auteur</span>
   </body>
 </html>
