--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Description" content="Ajax quote request" />
     <title>Ajax Request</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" async></script>
   </head>
   <body>
-    <img class="fadein" id="img" src="#" />
+    <img class="fadein" id="img" src="#" alt="image" />
     <blockquote class="fadein" id="quote">Citation</blockquote>
     <span class="fadein" id="author">Auteur</span>
   </body>
